# jupyrefs

./: .eslintrc.js  .gitignore  LICENSE  README.md  config.d.ts  config.js  install.json  jupyrefs.config.d.ts  jupyrefs.config.js  package-lock.json  package.json  pyproject.toml  webpack.config.js
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
client/: MANIFEST.in  README.md  RELEASE.md  package-lock.json  package.json  setup.py  tsconfig.json  webpack.config.js
client/src/: browser.ts  browsermodel.ts  common.ts  decl.d.ts  dirlisting.ts  drive.ts  forcegraph.ts  index.ts  interfaces.ts  pdfviewer.ts  refweb.ts  sidebar.ts
client/style/: base.css  browser.css  index.css  index.js  pdfviewer.css
scss/: jupyrefs.scss
server/: .eslintrc.cjs  .gitignore  package-lock.json  package.json  tsconfig.json
server/src/: contents.ts  index.ts
src/: browser.ts  browsermodel.ts  d3.d.ts  decl.d.ts  dirlisting.ts  drive.ts  editor.ts  forcegraph.ts  index.ts  interfaces.ts  pdfviewer.ts  plot.d.ts  plots.ts  svg.d.ts
style/: index.js
